# OJ

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  FUNCTION_AUDIT.md  G7-Architecture Design.md  OBSERVABILITY.md  PHASES.md  README.md  SECURITY_AUDIT.md  SPEC.md  TEAM_DIVISION.md  deploy-worker.sh  docker-compose.yml  sonar-project.properties  todo.md
backend/: CLAUDE.md  Dockerfile  Dockerfile.worker  pyproject.toml  seed_sample_exam.sql  seed_testcases.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_testcase_per_tc_limits.py  0003_testcase_name.py  0004_user_is_active.py  0005_exam_candidate_state.py  0006_exam_attempts.py  0007_judge_case_results.py  0008_observability_without_redis.py
backend/app/: config.py  deps.py  logging.py  main.py  observability.py
backend/app/models/: __init__.py  exam.py  exam_assignment.py  exam_attempt.py  exam_candidate_state.py  judge_result.py  problem.py  refresh_token.py  submission.py  test_case.py  user.py  worker_heartbeat.py
backend/app/routers/: admin.py  auth.py  exam.py  internal.py  problem.py  submission.py
backend/app/schemas/: admin.py  auth.py  exam.py  problem.py  (+1 more)
backend/lib/: config.py  custom_run.py  logging.py  observability.py  storage.py
backend/tests/: conftest.py  factories.py  test_admin.py  test_auth.py  test_custom_run.py  test_exam.py  test_health.py  test_internal.py  test_observability.py  test_problem.py  test_proctoring.py  test_queue.py  test_sandbox.py  test_storage.py  test_submission.py  test_worker.py
(+151 files in other folders)
