[project]
name = "oj-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.1",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.1.3",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "rq==1.16.2",
    "redis==5.0.4",
    "minio==7.2.7",
    "structlog==24.2.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "httpx==0.27.0",
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "ruff==0.4.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/migrations/*"]
